--- a/source/index.html
+++ b/source/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>HTML Academy: Кэт энерджи</title>
-  </head>
-  <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/adaptive">HTML и CSS. Адаптивная вёрстка и автоматизация</a>».</p>
+<head>
+  <meta charset="utf-8">
+  <title>HTML Academy: Кэт энерджи</title>
+</head>
 
-  </body>
+<body>
+  <header class="header">
+    <a class="header__logo logo">
+      <img clss="logo__icon" width="34" height="38" src="" alt="Маскот логотип CAT ENERGI.">
+      <img class="logo__text" width="101" height="18" src="" alt="Текстовый логотип CAT ENERGI.">
+    </a>
+    <nav class="main-navigation">
+      <button class="main-navigation__switch" type="button">
+        <span class="visually-hidden">Открыть/закрыть меню навигации.</span>
+      </button>
+      <ul class="main-navigation__list">
+        <li class="main-navigation__item">
+          <a class="main-navigation__link main-navigation__link--active">Главная</a>
+        </li>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+        </li>
+        <li class="main-navigation__item">
+          <a class="main-navigation__link" href="form.html">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+</body>
+
 </html>
