--- a/source/index.html
+++ b/source/index.html
@@ -3,32 +3,126 @@
 
 <head>
   <meta charset="utf-8">
-  <title>HTML Academy: Кэт энерджи</title>
+  <title>СAT ENERGI | Интернет-магазин функционального питания для котов</title>
 </head>
 
 <body>
-  <header class="header">
-    <a class="header__logo logo">
-      <img clss="logo__icon" width="34" height="38" src="" alt="Маскот логотип CAT ENERGI.">
-      <img class="logo__text" width="101" height="18" src="" alt="Текстовый логотип CAT ENERGI.">
-    </a>
-    <nav class="main-navigation">
-      <button class="main-navigation__switch" type="button">
-        <span class="visually-hidden">Открыть/закрыть меню навигации.</span>
-      </button>
-      <ul class="main-navigation__list">
-        <li class="main-navigation__item">
-          <a class="main-navigation__link main-navigation__link--active">Главная</a>
+  <header class="page-header">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo logo">
+        <img clss="logo__icon" width="34" height="38" src="img/logo-icon.svg" alt="Маскот логотип CAT ENERGI.">
+        <img class="logo__text" width="101" height="18" src="img/logo-text.svg" alt="Текстовый логотип CAT ENERGI.">
+      </a>
+      <nav class="main-navigation">
+        <button class="main-navigation__switch" type="button">
+          <span class="visually-hidden">Открыть/закрыть меню</span>
+        </button>
+        <ul class="main-navigation__list">
+          <li class="main-navigation__item">
+            <a class="main-navigation__link main-navigation__link--active">Главная</a>
+          </li>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="form.html">Подбор программы</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <h1 class="visually-hidden">СAT ENERGI</h1>
+    <section class="promo">
+      <h2 class="promo__title">Функциональное питание для котов</h2>
+      <p class="promo__slogan">
+        Занялся собой? Займись котом!
+      </p>
+      <img class="promo__image" width="280" height="270" src="img/promo_banner.png"
+        alt="Функциональное питаеие для котов &#171;Курица&#187; СAT ENERGI PRO.">
+      <a class="promo__program-selection button" href="form.html">Подобрать программу</a>
+    </section>
+    <section class="programs">
+      <h2 class="visually-hidden">Программы питания</h2>
+      <ul class="programs__list">
+        <li class="programs__item programs__item--slimming">
+          <h3 class="programs__title">Похудение</h3>
+          <p class="programs__text">
+            Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim
+            поможет вашему питомцу сбросить лишний вес.
+          </p>
+          <a class="programs__link" href="catalog.html">Каталог Slim</a>
         </li>
-        <li class="main-navigation__item">
-          <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
-        </li>
-        <li class="main-navigation__item">
-          <a class="main-navigation__link" href="form.html">Подбор программы</a>
+        <li class="programs__item programs__item--muscle-building">
+          <h3 class="programs__title">Набор массы</h3>
+          <p class="programs__text">
+            Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить
+            необходимые мышцы!
+          </p>
+          <a class="programs__link" href="catalog.html">Каталог Pro</a>
         </li>
       </ul>
-    </nav>
-  </header>
+    </section>
+    <section class="instruction">
+      <h2 class="instruction__title">Как это работает</h2>
+      <ul class="instruction__list">
+        <li class="instruction__item instruction__item--leaf">
+          <p class="instruction__text">
+            Функциональное питание содержит только полезные питательные вещества.
+          </p>
+        </li>
+        <li class="instruction__item instruction__item--powder">
+          <p class="instruction__text">
+            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+          </p>
+        </li>
+        <li class="instruction__item instruction__item--dining">
+          <p class="instruction__text">
+            Замените один-два приема обычной еды на наше фунцкциональное питание.
+          </p>
+        </li>
+        <li class="instruction__item instruction__item--clock">
+          <p class="instruction__text">
+            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+          </p>
+        </li>
+      </ul>
+    </section>
+    <sectio class="example">
+      <div class="example__info">
+        <h2 class="example__title">Живой пример</h2>
+        <p class="example__text">
+          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        </p>
+      </div>
+      <div class="example__table">
+        <div class="example__table--weight">
+          <span class="example__item--value">5 КГ</span>
+          <span class="example__item--description">снижение веса</span>
+        </div>
+        <div class="example__table--time">
+          <span class="example__item--value">60 ДНЕЙ</span>
+          <span class="example__item--description">затрачено времени</span>
+        </div>
+      </div>
+      <p class="example__expenses">Затраты на питание:
+        <span class="example__amount">15 000 руб.</span>
+      </p>
+      <div class="example__slider slider">
+        <img class="slider_image slider_image--before" src="img/fat-boris.png"  alt="Кот Борис толстый.">
+        <img class="slider_image slider_image--before" src="img/skinny-boris.png"  alt="Кот Борис похудел.">
+        <div class="slider__range">
+          <input type="range" min="0" max="100" value="50">
+        </div>
+      </div>
+      </section>
+
+
+  </main>
+  <footer>
+  </footer>
 </body>
 
 </html>
