--- a/source/index.html
+++ b/source/index.html
@@ -10,16 +10,14 @@
   <header class="main-header">
     <div class="main-header__wrapper">
       <a class="main-header__logo">
-        <img clss="main-header__logo-icon" width="34" height="38" src="img/logo-icon.svg"
-          alt="Маскот логотип CAT ENERGI.">
-        <img class="main-header__logo-text" width="101" height="18" src="img/logo-text.svg"
-          alt="Текстовый логотип CAT ENERGI.">
+        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg"
+          alt="Логотип CAT ENERGI.">
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
           <span class="visually-hidden">Открыть меню</span>
         </button>
-        <div class-="main-navigation__wrapper">
+        <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
             <li class="main-navigation__item--active">
               <a class="main-navigation__link">Главная</a>
@@ -36,15 +34,15 @@
     </div>
   </header>
 
-  <main class="page__main">
+  <main class="page-main">
     <h1 class="visually-hidden">СAT ENERGI - интернет-магазин функционального питания для котов</h1>
     <section class="promo">
       <h2 class="promo__title">Функциональное питание для котов</h2>
       <p class="promo__slogan">
         Занялся собой? Займись котом!
       </p>
-      <img class="promo__image" width="280" height="270" src="img/promo-banner.png"
-        alt="Функциональное питаеие для котов «Курица» СAT ENERGI PRO.">
+      <img class="promo__image" src="img/promo-banner.png" width="280" height="270"
+        alt="Cat Energy Pro «Курица» - функциональное питаеие для котов.">
       <a class="promo__program-selection button" href="form.html">Подобрать программу</a>
     </section>
     <section class="programs">
@@ -93,7 +91,7 @@
         </li>
       </ul>
     </section>
-    <sectio class="example">
+    <section class="example">
       <div class="example__info">
         <h2 class="example__title">Живой пример</h2>
         <p class="example__text">
@@ -117,26 +115,65 @@
       </p>
       <div class="example__slider slider">
         <img class="slider_image slider_image--before" src="img/fat-boris.png" alt="Кот Борис толстый.">
-        <img class="slider_image slider_image--before" src="img/skinny-boris.png" alt="Кот Борис похудел.">
+        <img class="slider_image slider_image--after" src="img/skinny-boris.png" alt="Кот Борис похудел.">
         <div class="slider__range">
           <input type="range" min="0" max="100" value="50">
         </div>
       </div>
-      </section>
-<section class="invite-cooperation">
-  <div class="invite-cooperation__wrapper">
-    <h2 class="invite-cooperation__title">Приглашаемек сотрудничеству дилеров!</h2>
-    <p class="invite-cooperation__address">
-      ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
-    </p>
-  </div>
-  <div class="invite-cooperation__map">
-    <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
-  </div>
-</section>
-
+    </section>
+    <section class="invite-cooperation">
+      <div class="invite-cooperation__wrapper">
+        <h2 class="invite-cooperation__title">Приглашаемек сотрудничеству дилеров!</h2>
+        <p class="invite-cooperation__address">
+          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+        </p>
+      </div>
+      <div class="invite-cooperation__map">
+        <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
+      </div>
+    </section>
   </main>
-  <footer>
+  <footer class="page-footer">
+    <div class="page-footer_wrapper">
+      <a class="page-footer__logo">
+        <img src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
+      </a>
+      <nav class="page-footer__socials socials">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="socials__list">
+          <li class="socials__item">
+            <a class="socials__link socials__link--vk" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--yotube" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+          <li class="socials__item">
+            <a class="socials__link socials__link--telegram" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Telegram</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <div class="page-footer__copyright copyright">
+        <a class="copyright__link" href="https://htmlacademy.ru">
+          <span class="copyright__name">HTML Academy</span>
+          <svg class="copyright__logo" width="27" height="34" viewBox="0 0 27 34" xmlns="http://www.w3.org/2000/svg"
+            fill="none">
+            <path d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0zm11.6 25L13.5 31.96
+              1.77 25V14.94l11.68 6.92.02 1.25-8.02-4.74v1.22l8.04 4.81.02 1.29-8.05-4.76v1.22l8.04
+              4.81 8.12-4.83V16.9l3.62-2.15v10.26zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.22 6.04
+              3.58-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23
+              1.94 1.13-1.98 1.19L1.8 13.58l11.64-6.96 11.8 6.83zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5
+              1.76 25.23 3v9.24z" fill="#666">
+            </path>
+          </svg>
+        </a>
+      </div>
+    </div>
   </footer>
 </body>
 
