Добавляет разметку по БЭМ для catalog.html

--- a/source/index.html
+++ b/source/index.html
@@ -123,7 +123,7 @@
     </section>
     <section class="invite-cooperation">
       <div class="invite-cooperation__wrapper">
-        <h2 class="invite-cooperation__title">Приглашаемек сотрудничеству дилеров!</h2>
+        <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
         </p>
