--- a/source/form.html
+++ b/source/form.html
@@ -10,8 +10,7 @@
   <header class="main-header">
     <div class="main-header__wrapper">
       <a class="main-header__logo" href="index.html">
-        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg"
-          alt="Логотип CAT ENERGI.">
+        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -34,7 +33,103 @@
     </div>
   </header>
 
-  <main>
+  <main class="page-form">
+    <section class="selection">
+      <div class="selection__wrapper">
+        <h1 class="selection__title">Подбор программы</h1>
+        <p class="selection__text">
+          Заполните анкету и мы подберём программу питания для вашего кота
+        </p>
+        <form class="selection__form" action="https://echo.htmlacademy.ru" method="get">
+          <fieldset class="selection__cat-data cat-data">
+            <legend class="visually-hidden">Информация о коте</legend>
+            <label class="cat-data__name" for="cat-name">Имя:*
+              <input type="text" name="Cat name" id="cat-name" placeholder="Барсик" required>
+            </label>
+            <label class="cat-data__weight" for="cat-weight">Вес (кг):*
+              <input type="number" name="Cat weight" id="cat-weight" min="0" max="25" placeholder="7" required>
+            </label>
+            <label class="cat-data__age" for="cat-age">Возраст (лет):
+              <input type="number" name="Cat age" id="cat-age" min="0" max="30" placeholder="7">
+            </label>
+          </fieldset>
+          <fieldset class="selection__program-target program-target">
+            <legend class="visually-hidden">Выбор программы</legend>
+            <ul class="program-target__radio-list">
+              <li class="program-target__radio-item">
+                <label class="program-target__slim" for="program-target-slim">
+                  <input type="radio" name="Program target" id="program-target-slim" value="Slim" checked>
+                  <span class="program-target__name">Похудение</span>
+                </label>
+              </li>
+              <li class="program-target__radio-item">
+                <label class="program-target__pro" for="program-target-pro">
+                  <input type="radio" name="Program target" id="program-target-pro" value="Pro">
+                  <span class="program-target__name">Набор массы</span>
+                </label>
+              </li>
+              <li class="program-target__radio-item">
+                <label class="program-target__advice" for="program-target-advice">
+                  <input type="radio" name="Program target" id="program-target-advice" value="Advice">
+                  <span class="program-target__name">Не знаю (Нужен ваш совет)</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          </fieldset>
+          <fieldset class="selection__owner-info owner-info">
+            <legend class="owner-info__title">Контактные данные (владельца кота)</legend>
+            <label class="owner-info__email" for="owner-info-email">E-mail:*
+              <input type="email" name="E-mail" id="owner-info-email" placeholder="kuklachev@gmail.com" required>
+            </label>
+            <label class="owner-info__telephone" for="owner-info-telephone">Телефон:*
+              <input type="tel" name="Phone" id="owner-info-telephone" placeholder="8 (960) 900-60-90" required>
+            </label>
+          </fieldset>
+          <fieldset class="section__comment-area comment-area">
+            <legend class="comment-area__title">Комментарий</legend>
+            <textarea class="comment-area__comment" name="Сomment" placeholder="Раccкажите обо всех повадках кота">
+            </textarea>
+          </fieldset>
+          <fieldset class="section__optionally optionally">
+            <legend class="optionally__title">Дополнительно</legend>
+            <ul class="optionally__list">
+              <li class="optionally__checkbox-item">
+                <label class="optionally__sugar-substitute">
+                  <input type="checkbox" name="Sugar substitute" checked>
+                  <span class="optionally__product-name">Сахарозаменитель</span>
+                </label>
+              </li>
+              <li class="optionally__checkbox-item">
+                <label class="optionally__water">
+                  <input type="checkbox" name="Water">
+                  <span class="optionally__product-name">Питьевая вода</span>
+                </label>
+              </li>
+              <li class="optionally__checkbox-item">
+                <label class="optionally__milk">
+                  <input type="checkbox" name="Milk">
+                  <span class="optionally__product-name">Молоко</span>
+                </label>
+              </li>
+              <li class="optionally__checkbox-item">
+                <label class="optionally__vitamins">
+                  <input type="checkbox" name="Vitamins">
+                  <span class="optionally__product-name">Витамины</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <div class="selection__form-submit-wrapper">
+            <button class="selection__form-submit button" type="submit">Отправить заявку</button>
+            <p class="selection__form-required">
+              * — Обязательные поля
+            </p>
+          </div>
+        </form>
+      </div>
+    </section>
+    </section>
     <section class="invite-cooperation">
       <div class="invite-cooperation__wrapper">
         <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
@@ -93,4 +188,3 @@
 </body>
 
 </html>
-
