--- a/source/index.html
+++ b/source/index.html
@@ -10,8 +10,7 @@
   <header class="main-header">
     <div class="main-header__wrapper">
       <a class="main-header__logo">
-        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg"
-          alt="Логотип CAT ENERGI.">
+        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="main-navigation">
         <button class="main-navigation__toggle" type="button">
@@ -67,57 +66,61 @@
       </ul>
     </section>
     <section class="instruction">
-      <h2 class="instruction__title">Как это работает</h2>
-      <ul class="instruction__list">
-        <li class="instruction__item instruction__item--leaf">
-          <p class="instruction__text">
-            Функциональное питание содержит только полезные питательные вещества.
-          </p>
-        </li>
-        <li class="instruction__item instruction__item--powder">
-          <p class="instruction__text">
-            Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
-          </p>
-        </li>
-        <li class="instruction__item instruction__item--dining">
-          <p class="instruction__text">
-            Замените один-два приема обычной еды на наше фунцкциональное питание.
-          </p>
-        </li>
-        <li class="instruction__item instruction__item--clock">
-          <p class="instruction__text">
-            Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
-          </p>
-        </li>
-      </ul>
+      <div class="instruction__wrapper">
+        <h2 class="instruction__title">Как это работает</h2>
+        <ul class="instruction__list">
+          <li class="instruction__item instruction__item--icon-leaf">
+            <p class="instruction__text">
+              Функциональное питание содержит только полезные питательные вещества.
+            </p>
+          </li>
+          <li class="instruction__item instruction__item--icon-powder">
+            <p class="instruction__text">
+              Выпускается в виде порошка, который нужно лишь залить кипятком и готово.
+            </p>
+          </li>
+          <li class="instruction__item instruction__item--icon-eat">
+            <p class="instruction__text">
+              Замените один-два приема обычной еды на наше фунцкциональное питание.
+            </p>
+          </li>
+          <li class="instruction__item instruction__item--icon-clock">
+            <p class="instruction__text">
+              Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
+            </p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="example">
-      <div class="example__info">
-        <h2 class="example__title">Живой пример</h2>
-        <p class="example__text">
-          Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-          изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+      <div class="example__wrapper">
+        <div class="example__info">
+          <h2 class="example__title">Живой пример</h2>
+          <p class="example__text">
+            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
+            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+          </p>
+        </div>
+        <div class="example__table">
+          <div class="example__table--weight">
+            <span class="example__item--value">5 КГ</span>
+            <span class="example__item--description">снижение веса</span>
+          </div>
+          <div class="example__table--time">
+            <span class="example__item--value">60 ДНЕЙ</span>
+            <span class="example__item--description">затрачено времени</span>
+          </div>
+        </div>
+        <p class="example__expenses">
+          Затраты на питание:
+          <span class="example__amount">15 000 руб.</span>
         </p>
-      </div>
-      <div class="example__table">
-        <div class="example__table--weight">
-          <span class="example__item--value">5 КГ</span>
-          <span class="example__item--description">снижение веса</span>
-        </div>
-        <div class="example__table--time">
-          <span class="example__item--value">60 ДНЕЙ</span>
-          <span class="example__item--description">затрачено времени</span>
-        </div>
-      </div>
-      <p class="example__expenses">
-        Затраты на питание:
-        <span class="example__amount">15 000 руб.</span>
-      </p>
-      <div class="example__slider slider">
-        <img class="slider_image slider_image--before" src="img/fat-boris.png" alt="Кот Борис толстый.">
-        <img class="slider_image slider_image--after" src="img/skinny-boris.png" alt="Кот Борис похудел.">
-        <div class="slider__range">
-          <input type="range" min="0" max="100" value="50">
+        <div class="example__slider slider">
+          <img class="slider_image slider_image--before" src="img/fat-boris.png" alt="Кот Борис толстый.">
+          <img class="slider_image slider_image--after" src="img/skinny-boris.png" alt="Кот Борис похудел.">
+          <div class="slider__range">
+            <input type="range" min="0" max="100" value="50">
+          </div>
         </div>
       </div>
     </section>
@@ -127,9 +130,9 @@
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
         </p>
-      </div>
-      <div class="invite-cooperation__map">
-        <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
+        <div class="invite-cooperation__map">
+          <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
+        </div>
       </div>
     </section>
   </main>
