--- a/source/form.html
+++ b/source/form.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>СAT ENERGI | Интернет-магазин функционального питания для котов</title>
+  <title>СAT ENERGI - интернет-магазин функционального питания для котов</title>
 </head>
 
 <body class="page__body">
@@ -18,7 +18,7 @@
         </button>
         <div class="main-navigation__wrapper">
           <ul class="main-navigation__list">
-            <li class="main-navigation__item--active">
+            <li class="main-navigation__item">
               <a class="main-navigation__link" href="index.html">Главная</a>
             </li>
             <li class="main-navigation__item">
@@ -41,6 +41,7 @@
           Заполните анкету и мы подберём программу питания для вашего кота
         </p>
         <form class="selection__form" action="https://echo.htmlacademy.ru" method="get">
+          <h2 class="visually-hidden">Форма подбора программы</h2>
           <fieldset class="selection__cat-data cat-data">
             <legend class="visually-hidden">Информация о коте</legend>
             <label class="cat-data__name" for="cat-name">Имя:*
@@ -76,7 +77,6 @@
               </li>
             </ul>
           </fieldset>
-          </fieldset>
           <fieldset class="selection__owner-info owner-info">
             <legend class="owner-info__title">Контактные данные (владельца кота)</legend>
             <label class="owner-info__email" for="owner-info-email">E-mail:*
@@ -86,13 +86,12 @@
               <input type="tel" name="Phone" id="owner-info-telephone" placeholder="8 (960) 900-60-90" required>
             </label>
           </fieldset>
-          <fieldset class="section__comment-area comment-area">
+          <fieldset class="selection__comment-area comment-area">
             <legend class="comment-area__title">Комментарий</legend>
-            <textarea class="comment-area__comment" name="Сomment" placeholder="Раccкажите обо всех повадках кота">
-            </textarea>
+            <textarea class="comment-area__comment" name="Сomment" placeholder="Раccкажите обо всех повадках кота"></textarea>
           </fieldset>
-          <fieldset class="section__optionally optionally">
-            <legend class="optionally__title">Дополнительно</legend>
+          <fieldset class="selection__optionally optionally">
+            <legend class="selection__title">Дополнительно</legend>
             <ul class="optionally__list">
               <li class="optionally__checkbox-item">
                 <label class="optionally__sugar-substitute">
@@ -129,7 +128,6 @@
         </form>
       </div>
     </section>
-    </section>
     <section class="invite-cooperation">
       <div class="invite-cooperation__wrapper">
         <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
@@ -144,7 +142,7 @@
   </main>
 
   <footer class="page-footer">
-    <div class="page-footer_wrapper">
+    <div class="page-footer__wrapper">
       <a class="page-footer__logo" href="index.html">
         <img src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
       </a>
