Добавляет каждому БЭМ-блоку отдельный препроцессорный файл

--- a/source/index.html
+++ b/source/index.html
@@ -4,12 +4,13 @@
   <head>
     <meta charset="utf-8">
     <title>СAT ENERGI - интернет-магазин функционального питания для котов</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
 
   <body class="page__body">
     <header class="main-header">
       <div class="main-header__wrapper">
-        <a class="main-header__logo">
+        <a class="main-header__logo-link">
           <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
         </a>
         <nav class="main-navigation">
@@ -138,8 +139,8 @@
     </main>
     <footer class="page-footer">
       <div class="page-footer__wrapper">
-        <a class="page-footer__logo">
-          <img src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
+        <a class="page-footer__logo-link">
+          <img class="page-footer__logo-icon" src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
         </a>
         <nav class="page-footer__socials socials">
           <h2 class="visually-hidden">Социальные сети</h2>
