--- a/source/form.html
+++ b/source/form.html
@@ -4,12 +4,13 @@
 <head>
   <meta charset="utf-8">
   <title>СAT ENERGI - интернет-магазин функционального питания для котов</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="page__body">
   <header class="main-header">
     <div class="main-header__wrapper">
-      <a class="main-header__logo" href="index.html">
+      <a class="main-header__logo-link" href="index.html">
         <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="main-navigation">
@@ -91,7 +92,7 @@
             <textarea class="comment-area__comment" name="Сomment" placeholder="Раccкажите обо всех повадках кота"></textarea>
           </fieldset>
           <fieldset class="selection__optionally optionally">
-            <legend class="selection__title">Дополнительно</legend>
+            <legend class="optionally__title">Дополнительно</legend>
             <ul class="optionally__list">
               <li class="optionally__checkbox-item">
                 <label class="optionally__sugar-substitute">
@@ -143,8 +144,8 @@
 
   <footer class="page-footer">
     <div class="page-footer__wrapper">
-      <a class="page-footer__logo" href="index.html">
-        <img src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
+      <a class="page-footer__logo-link" href="index.html">
+        <img class="page-footer__logo-icon" src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="page-footer__socials socials">
         <h2 class="visually-hidden">Социальные сети</h2>
