--- a/source/form.html
+++ b/source/form.html
@@ -13,23 +13,21 @@
       <a class="main-header__logo-link" href="index.html">
         <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
       </a>
+      <button class="main-navigation__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
       <nav class="main-navigation">
-        <button class="main-navigation__toggle" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-        </button>
-        <div class="main-navigation__wrapper">
-          <ul class="main-navigation__list">
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="index.html">Главная</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
-            </li>
-            <li class="main-navigation__item">
-              <a class="main-navigation__link">Подбор программы</a>
-            </li>
-          </ul>
-        </div>
+        <ul class="main-navigation__list">
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="index.html">Главная</a>
+          </li>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+          </li>
+          <li class="main-navigation__item">
+            <a class="main-navigation__link">Подбор программы</a>
+          </li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -89,7 +87,8 @@
           </fieldset>
           <fieldset class="selection__comment-area comment-area">
             <legend class="comment-area__title">Комментарий</legend>
-            <textarea class="comment-area__comment" name="Сomment" placeholder="Раccкажите обо всех повадках кота"></textarea>
+            <textarea class="comment-area__comment" name="Сomment"
+              placeholder="Раccкажите обо всех повадках кота"></textarea>
           </fieldset>
           <fieldset class="selection__optionally optionally">
             <legend class="optionally__title">Дополнительно</legend>
