Добавляет базовую стилизацию крупных сеточных блоков основного контента index.html

--- a/source/index.html
+++ b/source/index.html
@@ -35,7 +35,7 @@
 
   <main class="page-main">
     <h1 class="visually-hidden">СAT ENERGI - интернет-магазин функционального питания для котов</h1>
-    <section class="promo">
+    <section class="promo container">
       <h2 class="promo__title">Функциональное питание для котов</h2>
       <p class="promo__slogan">
         Занялся собой? Займись котом!
@@ -44,7 +44,7 @@
         alt="Cat Energy Pro «Курица» - функциональное питаеие для котов.">
       <a class="promo__program-selection button" href="form.html">Подобрать программу</a>
     </section>
-    <section class="programs">
+    <section class="programs container">
       <h2 class="visually-hidden">Программы питания</h2>
       <ul class="programs__list">
         <li class="programs__item programs__item--slimming">
@@ -66,7 +66,7 @@
       </ul>
     </section>
     <section class="instruction">
-      <div class="instruction__wrapper">
+      <div class="instruction__wrapper container">
         <h2 class="instruction__title">Как это работает</h2>
         <ul class="instruction__list">
           <li class="instruction__item instruction__item--icon-leaf">
@@ -93,7 +93,7 @@
       </div>
     </section>
     <section class="example">
-      <div class="example__wrapper">
+      <div class="example__wrapper container">
         <div class="example__info">
           <h2 class="example__title">Живой пример</h2>
           <p class="example__text">
@@ -119,25 +119,25 @@
           <img class="slider__image slider__image--before" src="img/fat-boris.png" alt="Кот Борис толстый.">
           <img class="slider__image slider__image--after" src="img/skinny-boris.png" alt="Кот Борис похудел.">
           <div class="slider__range">
-            <input type="range" min="0" max="100" value="50">
+            <input type="range" min="0" max="2" value="1">
           </div>
         </div>
       </div>
     </section>
-    <section class="invite-cooperation">
+    <section class="invite-cooperation container">
       <div class="invite-cooperation__wrapper">
         <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
         </p>
-        <div class="invite-cooperation__map">
-          <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
-        </div>
+      </div>
+      <div class="invite-cooperation__map">
+        <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
       </div>
     </section>
   </main>
-  <footer class="page-footer">
-    <div class="page-footer__wrapper">
+  <footer class="page-footer ">
+    <div class="page-footer__wrapper container">
       <a class="page-footer__logo-link">
         <img class="page-footer__logo-icon" src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
       </a>
