Добавляет базовую стилизацию крупных сеточных блоков основного контента form.html

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>СAT ENERGI - интернет-магазин функционального питания для котов</title>
+  <title>СAT ENERGI - Каталог продукции</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -13,7 +13,7 @@
       <a class="main-header__logo-link" href="index.html">
         <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
       </a>
-      <button class="main-navigation__toggle" type="button">
+      <button class="toggle-navigation" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <nav class="main-navigation">
@@ -146,7 +146,7 @@
                   </tr>
                   <tr class="card-item__row">
                     <td class="card-item__feature">Вкус</td>
-                      <td class="card-item__value">Рыба</td>
+                    <td class="card-item__value">Рыба</td>
                   </tr>
                   <tr class="card-item__row">
                     <td class="card-item__feature">Цена</td>
@@ -352,6 +352,7 @@
       </div>
     </section>
   </main>
+
   <footer class="page-footer ">
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo-link" href="index.html">
@@ -402,11 +403,11 @@
           <span class="copyright__name">HTML Academy</span>
           <svg xmlns="http://www.w3.org/2000/svg" width="27" height="34" fill="none" viewBox="0 0 27 34">
             <path fill="#666" d="M13.64.02 13.5 0 0 1.4v24.61L13.5 34 27 26.01V1.41L13.64 0zm11.6 25L13.5 31.96
-          1.77 25V14.94l11.68 6.92.02 1.25-8.02-4.74v1.22l8.04 4.81.02 1.29-8.05-4.76v1.22l8.04
-          4.81 8.12-4.83V16.9l3.62-2.15v10.26zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.22 6.04
-          3.58-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23
-          1.94 1.13-1.98 1.19L1.8 13.58l11.64-6.96 11.8 6.83zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5
-          1.76 25.23 3v9.24z" />
+              1.77 25V14.94l11.68 6.92.02 1.25-8.02-4.74v1.22l8.04 4.81.02 1.29-8.05-4.76v1.22l8.04
+              4.81 8.12-4.83V16.9l3.62-2.15v10.26zm0-11.57L22 15.33l-1.48.88-7.06-4.19-.01 1.22 6.04
+              3.58-.06.03-.13.07-.86.5-4.98-2.95-.01 1.22 3.93 2.33-.93.61-.02.01-2.97-1.74-.01 1.23
+              1.94 1.13-1.98 1.19L1.8 13.58l11.64-6.96 11.8 6.83zm0-1.22L13.43 5.3 1.77 12.22V2.99L13.5
+              1.76 25.23 3v9.24z" />
           </svg>
         </a>
       </div>
