--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
       <a class="main-header__logo-link">
         <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
       </a>
-      <button class="main-navigation__toggle" type="button">
+      <button class="toggle-navigation" type="button">
         <span class="visually-hidden">Открыть меню</span>
       </button>
       <nav class="main-navigation">
@@ -123,14 +123,14 @@
         </div>
       </div>
     </section>
-    <section class="invite-cooperation container">
+    <section class="invite-cooperation invite-cooperation--index">
       <div class="invite-cooperation__wrapper">
         <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
           ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
         </p>
       </div>
-      <div class="invite-cooperation__map">
+      <div class="invite-cooperation__map container">
         <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
       </div>
     </section>
