--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>СAT ENERGI - интернет-магазин функционального питания для котов</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
