--- a/source/index.html
+++ b/source/index.html
@@ -20,13 +20,13 @@
       <nav class="main-navigation">
         <ul class="main-navigation__list">
           <li class="main-navigation__item">
-            <a class="main-navigation__link">Главная</a>
+            <a class="main-navigation__link main-navigation__link--main">Главная</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link" href="catalog.html">Каталог продукции</a>
+            <a class="main-navigation__link main-navigation__link--main" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-navigation__item">
-            <a class="main-navigation__link" href="form.html">Подбор программы</a>
+            <a class="main-navigation__link main-navigation__link--main" href="form.html">Подбор программы</a>
           </li>
         </ul>
       </nav>
