--- a/source/index.html
+++ b/source/index.html
@@ -68,7 +68,7 @@
     <section class="instruction">
       <div class="instruction__wrapper container">
         <h2 class="instruction__title">Как это работает</h2>
-        <ul class="instruction__list">
+        <ol class="instruction__list">
           <li class="instruction__item instruction__item--icon-leaf">
             <p class="instruction__text">
               Функциональное питание содержит только полезные питательные вещества.
@@ -89,7 +89,7 @@
               Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!
             </p>
           </li>
-        </ul>
+        </ol>
       </div>
     </section>
     <section class="example">
