Добавляет адаптивную сетку index.html

--- a/source/form.html
+++ b/source/form.html
@@ -133,7 +133,8 @@
       <div class="invite-cooperation__wrapper">
         <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          ул. Большая Конюшенная, д. 19/8
+          <span>Санкт-Петербург</span>
         </p>
       </div>
       <div class="invite-cooperation__map container">
