--- a/source/index.html
+++ b/source/index.html
@@ -94,27 +94,30 @@
     </section>
     <section class="example">
       <div class="example__wrapper container">
-        <div class="example__info">
-          <h2 class="example__title">Живой пример</h2>
-          <p class="example__text">
-            Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без
-            изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+        <div class="example__desktop-wrapper">
+          <div class="example__info">
+            <h2 class="example__title">Живой пример</h2>
+            <p class="example__text">
+              Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат
+              без
+              изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.
+            </p>
+          </div>
+          <div class="example__results-table results-table">
+            <div class="results-table__weight">
+              <span class="results-table__value">5 КГ</span>
+              <span class="results-table__description">снижение веса</span>
+            </div>
+            <div class="results-table__time">
+              <span class="results-table__value">60 ДНЕЙ</span>
+              <span class="results-table__description">затрачено времени</span>
+            </div>
+          </div>
+          <p class="example__expenses">
+            Затраты на питание:
+            <span class="example__amount">15 000 руб.</span>
           </p>
         </div>
-        <div class="example__results-table results-table">
-          <div class="results-table__weight">
-            <span class="results-table__value">5 КГ</span>
-            <span class="results-table__description">снижение веса</span>
-          </div>
-          <div class="results-table__time">
-            <span class="results-table__value">60 ДНЕЙ</span>
-            <span class="results-table__description">затрачено времени</span>
-          </div>
-        </div>
-        <p class="example__expenses">
-          Затраты на питание:
-          <span class="example__amount">15 000 руб.</span>
-        </p>
         <div class="example__slider slider">
           <img class="slider__image slider__image--before" src="img/fat-boris.png" alt="Кот Борис толстый.">
           <img class="slider__image slider__image--after" src="img/skinny-boris.png" alt="Кот Борис похудел.">
@@ -128,11 +131,15 @@
       <div class="invite-cooperation__wrapper">
         <h2 class="invite-cooperation__title">Приглашаем к сотрудничеству дилеров!</h2>
         <p class="invite-cooperation__address">
-          ул. Большая Конюшенная, д. 19/8 Санкт-Петербург
+          ул. Большая Конюшенная, д. 19/8
+          <span>Санкт-Петербург</span>
         </p>
       </div>
-      <div class="invite-cooperation__map container">
-        <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
+      <div class="invite-cooperation__map">
+        <iframe class="invite-cooperation__google-map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9191.016012052718!2d30.31261095329799!3d59.93706571329095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sth!4v1682501822185!5m2!1sru!2sth"
+          allowfullscreen>
+        </iframe>
       </div>
     </section>
   </main>
