--- a/source/catalog.html
+++ b/source/catalog.html
@@ -262,7 +262,7 @@
       </ul>
     </section>
     <section class="extra-catalog container">
-      <h2 class="extra-catalog__title">Дополнительные товары</h2>
+        <h2 class="extra-catalog__title title-line">Дополнительные товары</h2>
       <ul class="extra-catalog__list">
         <li class="extra-catalog__extra-card-item extra-card-item">
           <h3 class="extra-card-item__title">Сахарозаменитель</h3>
@@ -349,8 +349,10 @@
           <span>Санкт-Петербург</span>
         </p>
       </div>
-      <div class="invite-cooperation__map container">
-        <img src="img/replaces-map.jpg" width="320" height="362" alt="Заглушка карты.">
+      <div class="invite-cooperation__map">
+        <iframe class="invite-cooperation__google-map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9191.016012052718!2d30.31261095329799!3d59.93706571329095!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCDQoNC-0YHRgdC40Y8sIDE5MTE4Ng!5e0!3m2!1sru!2sth!4v1682501822185!5m2!1sru!2sth">
+        </iframe>
       </div>
     </section>
   </main>
