--- a/source/index.html
+++ b/source/index.html
@@ -130,7 +130,7 @@
             <div class="slider__image slider__image--right">
               <img src="img/skinny-boris.png" alt="Кот Борис похудел.">
             </div>
-            <div class="slider__control"></div>
+            <div class="slider__bar"></div>
           </div>
         </div>
       </div>
