:heavy_check_mark: Сборка #7

--- a/7/index.html
+++ b/7/index.html
@@ -131,7 +131,7 @@
             <div class="slider__image slider__image--right">
               <img src="img/skinny-boris.png" alt="Кот Борис похудел.">
             </div>
-            <div class="slider__control"></div>
+            <div class="slider__bar"></div>
           </div>
         </div>
       </div>
