Добавляет фавиконки и адаптивную графика графику для всех страниц

--- a/source/form.html
+++ b/source/form.html
@@ -4,7 +4,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>СAT ENERGI - Подбор программы</title>
+  <title>test 07 СAT ENERGI - Подбор программы</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,7 +16,11 @@
   <header class="main-header">
     <div class="main-header__wrapper container">
       <a class="main-header__logo-link" href="index.html">
-        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
+        <picture>
+          <source media="(min-width: 768px)" srcset="img/header/logo-desktop.svg">
+          <img src="img/header/logo-mobile.svg" width="191" height="38" src="img/logo-icon.svg"
+            alt="Логотип CAT ENERGI.">
+        </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--nojs" type="button">
         <span>Открыть меню</span>
@@ -165,7 +173,7 @@
   <footer class="page-footer ">
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo-link" href="index.html">
-        <img class="page-footer__logo-icon" src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
+        <img class="page-footer__logo-icon" src="img/footer/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="page-footer__socials socials">
         <h2 class="visually-hidden">Социальные сети</h2>
