--- a/source/catalog.html
+++ b/source/catalog.html
@@ -5,6 +5,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>СAT ENERGI - Каталог продукции</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="img/favicons/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="img/favicons/apple.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -12,7 +16,11 @@
   <header class="main-header">
     <div class="main-header__wrapper container">
       <a class="main-header__logo-link" href="index.html">
-        <img class="main-header__logo-icon" width="191" height="38" src="img/logo-icon.svg" alt="Логотип CAT ENERGI.">
+        <picture>
+          <source media="(min-width: 768px)" srcset="img/header/logo-desktop.svg">
+          <img src="img/header/logo-mobile.svg" width="191" height="38" src="img/logo-icon.svg"
+            alt="Логотип CAT ENERGI.">
+        </picture>
       </a>
       <button class="toggle-navigation toggle-navigation--burger toggle-navigation--nojs" type="button">
         <span>Открыть меню</span>
@@ -40,8 +48,13 @@
         <li class="catalog__card-item card-item" id="pro">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/chicken-500.png" width="140" height="112"
-                alt="Cat Energy Pro «Курица» 500 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/chicken-500-tablet.png 1x, img/catalog/chicken-500-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/chicken-500-mobile.png"
+                  srcset="img/catalog/chicken-500-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Pro «Курица» 500 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Pro 500 г
@@ -71,8 +84,13 @@
         <li class="catalog__card-item card-item">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/chicken-1000.png" width="140" height="112"
-                alt="Cat Energy Pro «Курица» 1000 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/chicken-1000-tablet.png 1x, img/catalog/chicken-1000-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/chicken-1000-mobile.png"
+                  srcset="img/catalog/chicken-1000-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Pro «Курица» 100 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Pro 1000 г
@@ -102,8 +120,13 @@
         <li class="catalog__card-item card-item">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/fish-500.png" width="140" height="112"
-                alt="Cat Energy Pro «Рыба» 500 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/fish-500-tablet.png 1x, img/catalog/fish-500-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/fish-500-mobile.png"
+                  srcset="img/catalog/fish-500-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Pro «Рыба» 500 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Pro 500 г
@@ -133,8 +156,13 @@
         <li class="catalog__card-item card-item">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/fish-1000.png" width="140" height="112"
-                alt="Cat Energy Pro «Рыба» 1000 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/fish-1000-tablet.png 1x, img/catalog/fish-1000-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/fish-1000-mobile.png"
+                  srcset="img/catalog/fish-1000-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Pro «Рыба» 1000 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Pro 1000 г
@@ -164,8 +192,13 @@
         <li class="catalog__card-item card-item" id="slim">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/buckwheat-500.png" width="140" height="112"
-                alt="Cat Energy Slim «Гречка» 500 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/buckwheat-500-tablet.png 1x, img/catalog/buckwheat-500-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/buckwheat-500-mobile.png"
+                  srcset="img/catalog/buckwheat-500-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Slim «Гречка» 500 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Slim 500 г
@@ -195,8 +228,13 @@
         <li class="catalog__card-item card-item">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/buckwheat-1000.png" width="140" height="112"
-                alt="Cat Energy Slim «Гречка» 1000 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/buckwheat-1000-tablet.png 1x, img/catalog/buckwheat-1000-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/buckwheat-1000-mobile.png"
+                  srcset="img/catalog/buckwheat-1000-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Slim «Гречка» 1000 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Slim 1000 г
@@ -226,8 +264,13 @@
         <li class="catalog__card-item card-item">
           <div class="card-item__wrapper">
             <a class="card-item__image-link" href="#">
-              <img class="card-item__image" src="img/catalog/rice-500.png" width="140" height="112"
-                alt="Cat Energy Slim «Рис» 500 г">
+              <picture>
+                <source media="(min-width: 768px)"
+                  srcset="img/catalog/rice-500-tablet.png 1x, img/catalog/rice-500-tablet@2x.png 2x">
+                <img class="card-item__image" src="img/catalog/rice-500-mobile.png"
+                  srcset="img/catalog/rice-500-mobile@2x.png 2x" width="140" height="112"
+                  alt="Cat Energy Slim «Рис» 500 г">
+              </picture>
             </a>
             <div class="card-item__description">
               <a class="card-item__link" href="#">Cat Energy Slim 500 г
@@ -370,7 +413,7 @@
   <footer class="page-footer ">
     <div class="page-footer__wrapper container">
       <a class="page-footer__logo-link" href="index.html">
-        <img class="page-footer__logo-icon" src="img/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
+        <img class="page-footer__logo-icon" src="img/footer/logo.svg" width="128" height="24" alt="Логотип CAT ENERGI.">
       </a>
       <nav class="page-footer__socials socials">
         <h2 class="visually-hidden">Социальные сети</h2>
